versioned_docs/version-2.7/introduction/faq.md
---
id: faq
title: Beaver Builder FAQ
sidebar_label: FAQ
description: Frequently asked questions for the Beaver Builder page builder plugin.
---

Frequently asked questions for the Beaver Builder page builder plugin.

## Difference between Lite & Premium

Whether you have a tiny website or a big agency, we've got you covered with a lite or premium version of the Beaver Builder plugin.

:::info
See our [Pricing page](https://www.wpbeaverbuilder.com/pricing/) for a comparison of the features available in each version.
:::

<div className="embed-responsive">
  <iframe width="560" height="315" src="https://www.youtube.com/embed/xw9F_qJY4FA" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
</div>


## What Modules are included in the Lite version?

The lite (free) version of Beaver Builder contains the following subset of modules:

* [Audio](../layouts/modules/audio.md)
* [Button](../layouts/modules/button/button.md)
* [Heading](../layouts/modules/heading.md)
* [HTML](../layouts/modules/html.md)
* [Icon](../layouts/modules/icon-and-icon-group.md)
* [Photo](../layouts/modules/photo/photo.md)
* [Sidebar](../layouts/modules/sidebar.md)
* [Text Editor](../layouts/modules/text.md)
* [Video](../layouts/modules/video/video.md)

See the [Modules](../layouts/modules/index.md) section for a complete list of all available modules in the premium versions of Beaver Builder.

## Multisite vs Unlimited Sites

All Beaver Builder licenses offer unlimited site usage, meaning you can use any Beaver Builder product included with your license on as many sites as you like.

:::info
Only the Beaver Builder Ultimate, Agency, and Pro licenses are multisite-capable.
:::

### Multisite-capable

Normally, you install WordPress on each site you build so it's a standalone installation. *Multisite-capable* refers to a specific WordPress setup that lets you install WordPress once and manage multiple sites under that one installation. This is also referred to as a network.  You can read more about network/multisite setups in the [WordPress documentation](https://wordpress.org/support/article/create-a-network/).

:::tip
Beaver Builder can be configured network-wide for all sub-sites in the WordPress Multisite installation in the Ultimate and Agency licenses.
:::

### Unlimited Sites

*Unlimited sites* refers to the number of sites that you can add your license key to. There is no limit on any of our packages, including network sites with multisite setups.  

*Unlimited sites* also means that you can use your license key across servers and even hosts.  

See our [Terms and Conditions](https://www.wpbeaverbuilder.com/terms-and-conditions/) for details about the conditions under which you can use your license key.

## Is Beaver Builder a plugin or a theme?

Beaver Builder is a WordPress page builder plugin and can be installed using the WordPress plugin installer. However, some of our premium packages includes the [BB Theme](/bb-theme/).

See our [Pricing page](https://www.wpbeaverbuilder.com/pricing/) for more information.

## Does Beaver Builder work with other CMS's?

Beaver Builder is a page builder plugin for WordPress and therefore, is only compatible with the WordPress Content Management System (CMS). The same goes for our BB Theme and Beaver Themer products.

You're free to fork the Beaver Builder lite version available from [WordPress.org](https://wordpress.org/plugins/beaver-builder-lite-version/) and add your own support for other content management systems.

## Can I edit my blog page with Beaver Builder?

Beaver Builder doesn't work on archive pages like the Posts page (blog), categories, tags etc. If you want to use Beaver Builder to design your archive pages you will need to use a combination of Beaver Builder and Beaver Themer.

## Can I use Beaver Builder to create websites for clients?

You must use your license on websites that you own or manage. You may use your license on a client site in situations in which you maintain an ongoing relationship with your client as a consultant. By using your license on a client site, you acknowledge and agree that your client will come to you for support.

## Can I include Beaver Builder with my theme?

As a license holder of our products, you cannot distribute, freely give away, or resell your license key. You may not transfer the license key to a new owner. However, you may include the lite version.

## What's your refund policy?

Although we don’t think you’ll ever want a refund, we'll gladly refund your **first** purchase if it’s requested within 30 days. No refunds will be given after 30 days from the initial purchase or for repeat purchases under any circumstances.

For complete refund policy, [please visit this link](https://www.wpbeaverbuilder.com/terms-and-conditions/).

## Do you offer a trial version?

We do not provide trial version of our premium Beaver Builder, Beaver Themer plugins or BB theme, but we do provide a free 24-hour demo service, simply click [here to generate a demo](http://demo.wpbeaverbuilder.com/?new).

:::caution
Due to security concerns, you are not able to install plugins, themes, or export content that you have created in the demo service.
:::

## Do you provide hosting?

We do not offer a hosting server, but you can find several recommended web host providers on our [recommended resources](https://www.wpbeaverbuilder.com/recommended-resources/) page.

## Do you provide a design service?

We do not offer a design service, but we you can hire one of our [recommended builders](https://www.wpbeaverbuilder.com/recommended-builders/).

## Is our pricing monthly, annually or one-time?

All Beaver Builder licenses are billed annually and we do not offer payment plans or one time payment.

## Which Beaver Builder Packages include Beaver Themer?

Beaver Themer is only included with our Ultimate license. If you own any other Beaver Builder license, you will have to buy Beaver Themer separately.

## What payment methods do you accept?

We accept payment via PayPal and Stripe (Visa, MasterCard, JCB, Discover, Diner’s Club and American Express card).

## What happens if I don't renew my license?

Upon the expiration of your Beaver Builder license, you will lose the ability to download Beaver Builder products, receive updates, and access support.

Furthermore, we cannot assure the continued functionality of older versions of Beaver Builder, especially if you update other elements of your website, such as WordPress, PHP, or third-party extensions.

See the [Renew License](../account/license/renew.md#what-happens-if-i-dont-renew) article for more information.

## Upgrade from Lite to Premium

Yes, of course, you can upgrade from the free version to a premium version and keep your content intact.

See the [Upgrade License](../account/license/upgrade.md) article for more information.

## Is Beaver Builder compatible with Gutenberg?

The Beaver Builder plugin is compatible with the [WordPress block editor (Gutenberg)](https://wordpress.org/gutenberg/) in the same way that it's compatible with the ["classic" WordPress text editor](https://wordpress.org/plugins/classic-editor/). Depending on whether you set WordPress to prefer the block editor or use a plugin to maintain the classic editor, you can move text and images between Beaver Builder and the WordPress editor on a limited scale.

## Can I use Beaver Builder with any theme?

Beaver Builder has been developed to work with almost any theme. However, there are some exceptions to this rule.

## Can I modify the header and footer with Beaver Builder?

Beaver Builder works within the WordPress content area and does not interact with the header or footer of the theme. Even though you can replace the theme's header and footer using saved content such as rows and custom code, we recommend using Beaver Themer, which does not require any custom coding on your part.

## Convert my website to Beaver Builder?

There is no automated tool to convert your website content into Beaver Builder, but the solution may still be fairly easy.

Many other page builders work by adding shortcodes to the WordPress editor. This makes it nearly impossible to easily migrate your content to any other format. In fact, that may be a reason why you're considering or have chosen Beaver Builder.

If the old site had pages created using the standard WordPress text editor, the text and media in the WordPress editor will convert to a single Text Editor module when you open it in Beaver Builder.

## Can I create my own modules for Beaver Builder?

Yes! See our [custom module developer guide](../developer/custom-modules/index.md) article to get started. The guide contains a example plugin with a custom module that you can download.

## Does Beaver Builder work with Posts and Custom Post Types?

Yes! By default, Beaver Builder is only enabled for pages, but you can easily enable it for posts and custom post types from the Beaver Builder settings by going to **Settings > Beaver Builder > Post Types** from the WordPress admin panel.

## How does White Labeling work?

The [Agency and Ultimate packages](https://www.wpbeaverbuilder.com/pricing/) allows you to white label Beaver Builder and give your clients a truly white-glove experience. White labeling allows you to replace the words Beaver Builder and the Beaver Builder logo with your own company's name or logo in the Beaver Builder and WordPress UI.

## Can I include Beaver Builder as part of a premium or free WordPress theme?

We don't support bundling or redistributing the premium versions of Beaver Builder with a theme, but you're free to do this with [the free version](https://wordpress.org/plugins/beaver-builder-lite-version/).

For more information, see this [blog post about bundling the free version](https://www.wpbeaverbuilder.com/integrating-a-page-builder-with-your-wordpress-themes/) of Beaver Builder or Template Authors.

## Does Beaver Builder support shortcodes?

If you add the shortcode to a HTML module, you should be able to use shortcodes from your favorite plugins.

Additionally, Beaver Builder comes with its own shortcode that lets you insert templates, rows, columns, and modules directly into your layout.

See [the shortcodes article](../advanced-builder-techniques/shortcodes/use-shortcodes-in-your-layouts.md) for more information.

## Can I include Beaver Builder as part of my hosted website builder platform?

Yes! The features included in our Ultimate, and Agency licenses are geared towards those
that wish to create their own DIY hosted website publishing business (like SquareSpace).
